# p2p-rs

./: Cargo.toml  blocks.json  commands.md  readme.md  recipes.json  reworked_local_network.rs
.github/workflows/: test.yml
markdown/: algorithm.md  ideas.md  notes_backend_dev.md  notes_block.md  notes_decentralised.md  notes_libp2p.md  notes_p2p.md  notes_web3.md
src/: block.rs  chain.rs  crypt.rs  cryptutil.rs  data.rs  file.rs  file_block.rs  fork.rs  lib.rs  main.rs  message.rs  network.rs  notes_networking_protocols.md  peer.rs  swarm.rs  swarm_flood.rs  swarm_gossip.rs  swarm_gs.rs  transaction.rs  u8s.rs  util.rs
src/block/: block.rs  main.rs
src/p2p/: behaviour.rs  local_data.rs  local_io.rs  local_network.rs  local_swarm.rs  network.rs  notes_async.md  notes_p2p.md  p2p.rs  peer.rs  recipes.rs
src/tests/: block.rs  chain.rs  main.rs  test.rs  test_blocks.rs  transaction.rs
src/tmp/: chain_u8_32.rs  test.rs
